--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ neo4j==5.14.1
 apscheduler==3.10.4
 
 # Streamlit app
-streamlit==1.28.1
+streamlit>=1.35.0
 plotly==5.17.0
 pandas==2.1.3
 networkx==3.2.1
